<resources>
    <string name="app_name">Chat Application</string>
    <string name="email">Email :</string>
    <string name="enter_your_email_address">Enter Your email Address</string>
    <string name="password">Password :</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="loginbtn">Login</string>
    <string name="login">Login</string>
    <string name="write_a_message">Write a message</string>
</resources>
