<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abdallahmohammed.chatapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_email_EditText"
            android:hint="@string/enter_your_email_address"/>


    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password_EditText"
            android:hint="@string/enter_your_password"/>


    </LinearLayout>


    <Button
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginbtn"
        android:textAllCaps="false"
        android:id="@+id/login_Button"/>

</LinearLayout>
